2015/03/01 - 1.34.2  - Fenix          - added unregisterCommand method
2015/01/29 - 1.34.1  - Fenix          - fixed external plugin directory retrieval
2015/01/09 - 1.34    - Fenix          - added past bans check cronjob
                                      - adjusted b3.sql script path in debug message: make use of the correct protocol
2014/12/15 - 1.33    - Fenix          - unregister !restart command if B3 is not running in auto-restart mode
2014/11/15 - 1.32    - 82ndab-Bravo17 - added new command longlist that does a list with one player per line
                                      - and cid first. Allows you to see players with clever unicode names that
                                      - otherwise mess up the normal list command.
2014/09/06 - 1.31.1  - Fenix          - updated cmd_pluginfo to work with the new b3.ini configuration file format
2014/08/30 - 1.31    - Fenix          - syntax cleanup
                                      - improved debug messages in plugin configuration file loading
                                      - moved 'warn_command_abusers' config value loading into proper method
                                      - moved 'long_tempban_max_duration' config value loading into proper method
                                      - make use of cmd.sayLoudOrPM in cmd_enable and cmd_disable
                                      - added missing %s placeholder in cmd_unban faliure notification
2014/06/21 - 1.30    - Courgette      - fix spam command not considering the loud command prefix
2014/05/16 - 1.29    - Courgette      - add an optional parameter to the !spam command to allow to send a message to
                                        a given player in private
2014/05/03 - 1.28.1  - Fenix          - tell player why he is not allowed to use a certain command (issue #183)
2014/05/02 - 1.28    - Fenix          - make use of the new getCmd function from functions module
                                      - minor syntax fixes