@@ -1,3 +1,4 @@
+2015/06/26 - 1.34.4  - Fenix          - changed sayLoudOrPM to accept positional parameters for string substitution
 2015/03/01 - 1.34.2  - Fenix          - added unregisterCommand method
 2015/01/29 - 1.34.1  - Fenix          - fixed external plugin directory retrieval
 2015/01/09 - 1.34    - Fenix          - added past bans check cronjob
